# photon_mapping

./: CMakeLists.txt  Doxyfile  README.md
include/: Color.h  KdTree.h  Material.h  Object.h  Photon.h  PhotonMap.h  Plane.h  Ray.h  Renderer.h  Scene.h  Sphere.h  Utilities.h  Vector3.h
src/: Color.cpp  KdTree.cpp  Material.cpp  Photon.cpp  PhotonMap.cpp  Plane.cpp  Ray.cpp  Renderer.cpp  Scene.cpp  Sphere.cpp  Utilities.cpp  Vector3.cpp  main.cpp
